refactor: 관리자용 상품 목록 조회 응답 구조 통일